--- a/Wine_ds_for_machine_learning_practice.ipynb
+++ b/Wine_ds_for_machine_learning_practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN370pmueSe+ATKlfzr01np",
+      "authorship_tag": "ABX9TyPOocW9NNze8RP4lW6OfZqv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "sCGTUckAir0Z"
       },
@@ -54,12 +54,12 @@
     {
       "cell_type": "code",
       "source": [
-        "df=pd.read_csv(\"/content/Wine_Quality_Data.csv\")"
+        "df=pd.read_csv(\"Wine_Quality_Data.csv\")"
       ],
       "metadata": {
         "id": "RMYf2elLkN8k"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
         "id": "LmnMEd_ckhy5",
         "outputId": "83841fcf-28b4-4a5f-d367-dfeb82ec4a18"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -627,7 +627,7 @@
         "id": "HmBqzS4rlwZ_",
         "outputId": "660440c1-fbf2-428b-a92d-1f36e2d441fe"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -649,7 +649,7 @@
       "metadata": {
         "id": "WR3bfwQsl23O"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -660,7 +660,7 @@
       "metadata": {
         "id": "AyIQWll9mTrQ"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -671,7 +671,7 @@
       "metadata": {
         "id": "VhOYFIgNmbKJ"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -687,7 +687,7 @@
         "id": "rhPJDiR4mpFj",
         "outputId": "26b6d8f5-8acd-448f-9807-0f2bbaf86356"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1239,7 +1239,7 @@
         "id": "YX1TyTWZmstX",
         "outputId": "8188d1e9-d7fd-4be7-9d73-734869d8da29"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1266,7 +1266,7 @@
         "id": "2VqcaZkdmx9P",
         "outputId": "869682e9-1324-4a69-d0ea-660c737c7d32"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1384,7 +1384,7 @@
         "id": "hlKBV7RKm4Q_",
         "outputId": "441c4e6d-d614-49c3-b8c9-a17a70512eaa"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1406,7 +1406,7 @@
       "metadata": {
         "id": "X8mOWPQinAcs"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1422,7 +1422,7 @@
         "id": "6OU9YNvQnMq-",
         "outputId": "b02f1c35-7f62-4ede-b1a3-bb644ec33e0c"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1971,7 +1971,7 @@
       "metadata": {
         "id": "1sbkp0rHnO-l"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1987,7 +1987,7 @@
         "id": "1frZmL4_nlUV",
         "outputId": "fe013742-309a-4de2-ef16-595a895c48c7"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2082,7 +2082,7 @@
         "id": "BDvoNZC3oyK5",
         "outputId": "fab9ccb6-fd84-4a2f-9414-9a5f8791c8ee"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2109,7 +2109,7 @@
         "id": "moP0C9PPpaxZ",
         "outputId": "27047a1d-7927-4ac5-b0b0-ff301a473710"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2203,7 +2203,7 @@
         "id": "rQBo-oQfw-IJ",
         "outputId": "eb687ffe-5e27-4833-d5c4-6ef13dd495d7"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2292,7 +2292,7 @@
       "metadata": {
         "id": "jqEt-qn07dyz"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2310,7 +2310,7 @@
         "id": "5bHDI0c5xHr2",
         "outputId": "e151da9c-ed45-4d5d-9aab-523b5e39cf12"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2349,7 +2349,7 @@
         "id": "O-fLKoRB8GJZ",
         "outputId": "88f084cf-d737-4dcf-bf1d-8abe23736221"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2381,7 +2381,7 @@
       "metadata": {
         "id": "2JnF-y3_8etP"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2392,7 +2392,7 @@
       "metadata": {
         "id": "AAXSiQec8wke"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2413,7 +2413,7 @@
         "id": "PyDCX9WT8yoS",
         "outputId": "47dee7d5-bd22-4681-db43-c851158301e4"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2574,7 +2574,7 @@
         "id": "StMYPz-o-qvI",
         "outputId": "7f2a819b-d5a2-4b99-c79a-d864aeef37cf"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2606,7 +2606,7 @@
       "metadata": {
         "id": "BdFye9XV_Dt1"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2617,7 +2617,7 @@
       "metadata": {
         "id": "uouSQ3Dp_eHa"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     }
   ]
